--- a/contact.html
+++ b/contact.html
@@ -76,23 +76,23 @@
           <h2>Get In Touch</h2>
           <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
         </div>
-        <form name="sentMessage" id="contactForm" novalidate>
+        <form name="sentMessage" id="contactForm" novalidate action="https://docs.google.com/forms/d/e/1FAIpQLScoIYDW-eXWm8BBH97V3sQ1yedvmuhu3iD9X-K9h60OIFHaZg/formResponse" target="_self" method="POST">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
+                <input type="text" name="entry.1645438920" id="name" class="form-control" placeholder="Name" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+                <input type="email" name="entry.822823523" id="email" class="form-control" placeholder="Email" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
           </div>
           <div class="form-group">
-            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+            <textarea name="entry.1500133786" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
             <p class="help-block text-danger"></p>
           </div>
           <div id="success"></div>
@@ -117,7 +117,7 @@
       <div class="row">
         <div class="social">
           <ul>
-            <li><a href="#"><i class="fa fa-facebook"></i></a>CRESCENT CREEK CHURCH TANZANIA</li>
+            <li><a href="https://www.facebook.com/crescentcreektz/"><i class="fa fa-facebook"></i></a>CRESCENT CREEK CHURCH TANZANIA</li>
             <li><a href="#"><i class="fa fa-youtube"></i></a></li>
             <li><a href="#"><i class="fa fa-instagram"></i></a>@CRESCENTCREEKTZ</li>
           </ul>
