--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
     <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+<!--facebook javascript sdk-->
+<div id="fb-root" "page-top" data-spy="scroll" data-target=".navbar-fixed-top"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s) [0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script','facebook-jssdk'));</script>
+
 <!-- Navigation
     ==========================================-->
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
@@ -93,13 +102,11 @@
    
 
     <div class="row">
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>Evangelism and outreach</h3>
-          
-        </div>
-      </div>
+      <!--facebook page for the church -->
+      <div class="fb-page" data-href="https://www.facebook.com/crescentcreektz/" 
+      data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+      <blockquote cite="https://www.facebook.com/crescentcreektz/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/crescentcreektz/">Crescent Creek Church Tanzania</a></blockquote></div>
+      
       <div class="col-md-4">
         <div class="service-media"> <img src="img/services/service-5.jpg" alt=" "> </div>
         <div class="service-desc">
