--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="container">
    
 
-    <div class="row">
+    <div class="column">
       <!--facebook page for the church -->
       <div class="fb-page" data-href="https://www.facebook.com/crescentcreektz/" 
       data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
