logo favicon in index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- Favicons
     ================================================== -->
-
+<link rel="shotcut icon" type="image/png" href="img/logo.png"> 
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
