--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 
 <!-- Favicons
     ================================================== -->
+    <link rel="icon" type="image/png" href="img/logo.png"> 
 
 
 <!-- Bootstrap -->
