--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
       <div class="col-xs-12 col-md-6"><img src="img/about.jpg" class="img-responsive" alt=""></div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <h2>HOME</h2>
+          <h2>Welcome</h2>
           <m>Welcome to Crescent Creek Church Tanzania!. Here at Crescent Creek, we want to share the love and peace of Christ Jesus with you no matter where you may have come from. We want you to feel at home with us, so please continue reading to know more about our vision, beliefs and purpose. </m>
         </div>
       </div>
