--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
       <a class="navbar-brand page-scroll" href="#page-top">CCC Tz</a>
-      <div class="phone"><span>Call Today</span>0678704716</div>
+      <div class="phone"><span>Call Today</span>+255678704716</div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
