contact country code

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
           Shamool Hotel</p>
       </div>
       <div class="contact-item">
-        <p><span>Phone</span> 0678704716</p>
+        <p><span>Phone</span> +255678704716</p>
       </div>
       <div class="contact-item">
         <p><span>Email</span> info@crescentcreekchurchtz.com</p>
