active menu update css and each copy

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <li><a href="vision.html" class="page-scroll">VISION</a></li>
         <li><a href="mission statement.html" class="page-scroll">MISSION STATEMENT</a></li>
         <li><a href="connect with us.html" class="page-scroll">CONNECT WITH US</a></li>
-        <li><a href="contact.html" class="page-scroll">CONTACT</a></li>
+        <li class="active"><a href="contact.html" class="page-scroll">CONTACT</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
