--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html" class="page-scroll">HOME</a></li>
-        <li><a href="home.html" class="page-scroll">WELCOME</a></li>
+        <li class="active"><a href="home.html" class="page-scroll">WELCOME</a></li>
         <li><a href="vision.html" class="page-scroll">VISION</a></li>
         <li><a href="mission statement.html" class="page-scroll">MISSION STATEMENT</a></li>
         <li><a href="connect with us.html" class="page-scroll">CONNECT WITH US</a></li>
