--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html" class="page-scroll">HOME</a></li>
+        <li class="active"><a href="index.html" class="page-scroll">HOME</a></li>
         <li><a href="home.html" class="page-scroll">WELCOME</a></li>
         <li><a href="vision.html" class="page-scroll">VISION</a></li>
         <li><a href="mission statement.html" class="page-scroll">MISSION STATEMENT</a></li>
@@ -117,7 +117,7 @@
 <!-- FOOTER SECTION -->
 <div id="footer">
   <div class="container text-center">
-    <p>&copy; 2018 CCCTZ. Design by <a href="http://www.pkasemer.com" rel="nofollow">Pkasemer Technologies</a></p>
+    <p>&copy; 2018 Crescent Creek Church Tanzania.</p>
   </div>
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
