--- a/connect with us.html
+++ b/connect with us.html
@@ -9,7 +9,7 @@
 
 <!-- Favicons
     ================================================== -->
-<link rel="icon" type="image/png" href="img/logo.png"> 
+<link rel="icon" type="image/png" href="img/logo.png">
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -50,6 +50,7 @@
         <li><a href="vision.html" class="page-scroll">VISION</a></li>
         <li><a href="mission statement.html" class="page-scroll">MISSION STATEMENT</a></li>
         <li class="active"><a href="connect with us.html" class="page-scroll">CONNECT WITH US</a></li>
+        <li><a href="gallery.html" class="page-scroll">GALLERY</a></li>
         <li><a href="contact.html" class="page-scroll">CONTACT</a></li>
       </ul>
     </div>
@@ -141,4 +142,3 @@
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
-
