--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <!-- Favicons
     ================================================== -->
-    <link rel="icon" type="image/png" href="img/logo.png"> 
+    <link rel="icon" type="image/png" href="img/logo.png">
 
 
 <!-- Bootstrap -->
@@ -51,6 +51,7 @@
         <li><a href="vision.html" class="page-scroll">VISION</a></li>
         <li><a href="mission statement.html" class="page-scroll">MISSION STATEMENT</a></li>
         <li><a href="connect with us.html" class="page-scroll">CONNECT WITH US</a></li>
+        <li><a href="gallery.html" class="page-scroll">GALLERY</a></li>
         <li class="active"><a href="contact.html" class="page-scroll">CONTACT</a></li>
       </ul>
     </div>
@@ -74,11 +75,11 @@
 
     <div class="col-md-8">
       <div class="row">
-   
+
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoIYDW-eXWm8BBH97V3sQ1yedvmuhu3iD9X-K9h60OIFHaZg/viewform?embedded=true" width="750" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-        
+
       </div>
-      
+
     </div>
     <div class="col-md-3 col-md-offset-1 contact-info">
       <div class="contact-item">
