--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,8 @@
 
 <!-- Favicons
     ================================================== -->
-<link rel="icon" type="image/png" href="img/logo.png">
+ <link rel="icon" type="image/png" href="img/logo.png">
+
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -46,21 +47,21 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html" class="page-scroll">HOME</a></li>
-        <li class="active"><a href="home.html" class="page-scroll">WELCOME</a></li>
+        <li><a href="home.html" class="page-scroll">WELCOME</a></li>
         <li><a href="vision.html" class="page-scroll">VISION</a></li>
         <li><a href="mission statement.html" class="page-scroll">MISSION STATEMENT</a></li>
         <li><a href="connect with us.html" class="page-scroll">CONNECT WITH US</a></li>
-        <li><a href="gallery.html" class="page-scroll">GALLERY</a></li>
+        <li class="active"><a href="gallery.html" class="page-scroll">GALLERY</a></li>
         <li><a href="contact.html" class="page-scroll">CONTACT</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
   </div>
 </nav>
-<br>
-<br>
-<br>
 <!-- Header -->
+<br>
+<br>
+<br>
 
 <!-- Get Touch Section -->
 <div id="get-touch">
@@ -79,53 +80,59 @@
     </div>
   </div>
 </div>
-<br>
-<br>
-<!-- HOME SECTION -->
-<div id="footer">
-
-</div>
-<div id="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-6"><img src="img/about.jpg" class="img-responsive" alt=""></div>
-      <div class="col-xs-12 col-md-6">
-        <div class="about-text">
-          <h2>Welcome</h2>
-          <m>Welcome to Crescent Creek Church Tanzania!. Here at Crescent Creek, we want to share the love and peace of Christ Jesus with you no matter where you may have come from. We want you to feel at home with us, so please continue reading to know more about our vision, beliefs and purpose. </m>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- VISION SECTION -->
 <div id="services">
   <div class="container">
     <div class="section-title">
-          </div>
-  </div>
-</div>
+      <h2>GALLERY</h2>
+      <p>Moments to share with you!</p>
+      </div>
 
+    <div class="row">
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/BAEN2870.JPG" alt=" "> </div>
 
+      </div>
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/CEYQ9325.JPG" alt=" "> </div>
 
-<!-- CONTACT SECTION -->
-<div id="contact">
-  <div class="container">
+      </div>
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/EGMO6439.JPG" alt=" "> </div>
 
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/GDEX7848.JPG" alt=" "> </div>
 
-    <div class="col-md-12">
-      <div class="row">
-        <div class="social">
-          <ul>
-            <li><a href="#"><i class="fa fa-facebook"></i></a>CRESCENT CREEK CHURCH TANZANIA</li>
-            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram"></i></a>@CRESCENTCREEKTZ</li>
-          </ul>
-        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/QJQU0948.JPG" alt=" "> </div>
+
+      </div>
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/HNCR8293.JPG" alt=" "> </div>
+
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/HZEB3176.JPG" alt=" "> </div>
+
+      </div>
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/OQWJ0644.JPG" alt=" "> </div>
+
+      </div>
+      <div class="col-md-4">
+        <div class="service-media"> <img src="img/services/PXXO3684.JPG" alt=" "> </div>
+
       </div>
     </div>
   </div>
 </div>
+
 <!-- FOOTER SECTION -->
 <div id="footer">
   <div class="container text-center">
