--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <li><a href="vision.html" class="page-scroll">VISION</a></li>
         <li><a href="mission statement.html" class="page-scroll">MISSION STATEMENT</a></li>
         <li><a href="connect with us.html" class="page-scroll">CONNECT WITH US</a></li>
+        <li><a href="gallery.html" class="page-scroll">GALLERY</a></li>
         <li><a href="contact.html" class="page-scroll">CONTACT</a></li>
       </ul>
     </div>
@@ -102,10 +103,10 @@
       <div class="col-xs-12 col-md-6"><img src="img/services/service-4.jpg" class="img-responsive" alt=""></div>
 
       <div class="col-xs-12 col-md-6">
-      
+
         <div class="about-text">
-          
-      <div class="fb-page" data-href="https://www.facebook.com/crescentcreektz/" 
+
+      <div class="fb-page" data-href="https://www.facebook.com/crescentcreektz/"
       data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
       <blockquote cite="https://www.facebook.com/crescentcreektz/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/crescentcreektz/">Crescent Creek Church Tanzania</a></blockquote></div>
         </div>
