--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
 <!-- FOOTER SECTION -->
 <div id="footer">
   <div class="container text-center">
-    <p>&copy; 2019 Crescent Creek Church Tanzania.</p>
+    
+        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Crescent Creek Church Tanzania - Designed by Pkase Technologies
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+      
   </div>
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
