--- a/connect with us.html
+++ b/connect with us.html
@@ -130,7 +130,11 @@
 <!-- FOOTER SECTION -->
 <div id="footer">
   <div class="container text-center">
-    <p>&copy; 2018 CCCTZ. Design by <a href="http://www.pkasemer.com" rel="nofollow">Pkasemer Technologies</a></p>
+ 
+      
+        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Crescent Creek Church Tanzania - Designed by Pkase Technologies
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
   </div>
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
