bug fix-- removed google forms

--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,7 @@
 <div id="contact">
 <br>
 <br>
+    <div class="container">
 
     <div class="col-md-3 col-md-offset-1 contact-info">
       <div class="contact-item">
